# ResearchProjectFHDO

./: README.md
Research Thesis Doc/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  teamhenkler.cls
Research Thesis Doc/src/: A1_Appendix.tex  bib.bib  conclusion.tex  evaluation.tex  fundamentals.tex  implementation.tex  introduction.tex  methodology.tex  rough.tex  (+1 more)
c-slam/: README.md  main.py  pyproject.toml
c-slam/c_slam_central/: __init__.py  central_backend.py
c-slam/c_slam_common/: __init__.py  bandwidth.py  graph.py  isam2.py  kpi_logging.py  latency.py  loader.py  metrics.py  models.py  resource_monitor.py  robust.py  stabilisation.py  viz.py
c-slam/c_slam_decentral/: __init__.py  agents.py  communication.py  mp_runner.py
c-slam/c_slam_ros2/: __init__.py  ack.py  factor_batch.py  factor_source.py  impair.py  interface_msg.py  map_broadcast.py  qos.py  sim_time.py
c-slam/new_eval/tools/: README.md  orchestrate.baseline.json  orchestrate.py  plot_eval_all.py  plot_eval_chapter.py  plot_eval_chapter_updated.py  plot_eval_extra.py  run_baseline.py  what is being meassured.md
c-slam/old_src/: evaluation.tex  fundamentals.tex  implementation.tex  methodology.tex  state_art.tex
c-slam/tools/: __init__.py  check_tconv_input_end.py  impair.example.json  kpi_derive.py  orchestrate.example.json  orchestrate.py  ros2_factor_publisher.py
c-slam/tools/old_dev/: evaluate_baseline.py  evaluate_sweep.py  summarize_sweep_params.py  sweep_baseline.template.json  targeted_sweep.md  targeted_sweep.py
