[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c-slam"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "psutil",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {}

[tool.setuptools.packages.find]
where = ["."]
include = [
  "c_slam_common*",
  "c_slam_ros2*",
  "c_slam_central*",
  "c_slam_decentral*",
]
